--- a/roles/zabbix/tasks/main.yml
+++ b/roles/zabbix/tasks/main.yml
@@ -1,107 +1,9 @@
 ---
 
-- name: Install mysql package
-  apt:
-    name:
-      - mysql-server
-    update_cache: yes
-  become: true
+- name: "Install with Debian"
+  include_tasks: "Debian.yml"
+  when: ansible_os_family == "Debian"
 
-- name: Download release package
-  get_url:
-    url: https://repo.zabbix.com/zabbix/4.2/ubuntu/pool/main/z/zabbix-release/zabbix-release_4.2-1+bionic_all.deb
-    checksum: sha256:d5675bb3e8ca788bf326f1c98182e138285c2980a86587e9e6fdae9fc8dd2d00
-    dest: /tmp
-
-- name: Install release package
-  apt:
-    deb: /tmp/zabbix-release_4.2-1+bionic_all.deb
-  become: true
-
-- name: Install zabbix packages
-  apt:
-    name:
-      - zabbix-frontend-php
-      - zabbix-server-mysql
-    update_cache: yes
-  become: true
-
-- name: Fix PHP timezone
-  replace:
-    path: /etc/zabbix/apache.conf
-    regexp: '(\s+)# php_value date.timezone Europe/Riga'
-    replace: '\1php_value date.timezone Europe/Oslo'
-  become: true
-  register: php_timezone
-
-- name: Reload apache2
-  when: php_timezone.changed
-  service:
-    name: apache2
-    state: reloaded
-  become: true
-
-- name: Install python MySQL modules
-  apt:
-    name:
-      - python3-mysqldb
-  become: true
-
-- name: Create zabbix database
-  mysql_db:
-    name: zabbix
-    state: present
-  become: true
-  register: create_database
-
-- name: Create zabbix database user
-  mysql_user:
-    name: zabbix-user
-    password: "{{ password }}"
-    priv: 'zabbix.*:ALL'
-    state: present
-  become: true
-
-- name: Fill zabbix database
-  when: create_database.changed
-  shell: zcat /usr/share/doc/zabbix-server-mysql/create.sql.gz | mysql zabbix
-  become: true
-  register: fill_database
-
-- name: Copy zabbix web config
-  template:
-    src: zabbix.conf.php.j2
-    dest: /usr/share/zabbix/conf/zabbix.conf.php
-  become: true
-
-- name: Copy zabbix server config
-  template:
-    src: zabbix_server.conf.j2
-    dest: /etc/zabbix/zabbix_server.conf
-  become: true
-
-- name: Enable zabbix-server
-  service:
-    name: zabbix-server
-    state: started
-  become: true
-
-- name: Start zabbix-server
-  service:
-    name: zabbix-server
-    state: started
-  become: true
-
-- name: Install pyzabbix with pip
-  pip:
-    name: pyzabbix
-  become: true
-
-- name: Copy post init script
-  template:
-    src: post-init.py.j2
-    dest: /tmp/post-init.py
-  
-- name: Run post init script
-  when: fill_database.changed
-  command: /usr/bin/python3 /tmp/post-init.py
+- name: "Install with RedHat"
+  include_tasks: "RedHat.yml"
+  when: ansible_os_family == "RedHat"
